[package]
name = "junit-parser"
version = "0.2.0"
authors = ["Boris Faure <boris@fau.re>"]
license = "BSD-2-Clause"
edition = "2021"
keywords = ["junit", "xunit", "xml", "parser", "report"]
categories = ["development-tools::testing", "parser-implementations"]
readme = "README.md"
description = "Rust library to parse JUnit XML files"
repository = "https://github.com/borisfaure/junit-parser"
documentation = "https://docs.rs/junit-parser/"

[features]
serde = ["dep:serde"]
default = []

[dependencies]
quick-xml = "0.30"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
