[package]
name = "junit-parser"
version = "0.2.0"
authors = ["Boris Faure <boris@fau.re>"]
license = "BSD-2-Clause"
edition = "2021"
keywords = ["junit", "xunit", "xml", "parser", "report"]
categories = ["development-tools::testing", "parser-implementations"]
readme = "README.md"
description = "Rust library to parse JUnit XML files"
repository = "https://github.com/borisfaure/junit-parser"
documentation = "https://docs.rs/junit-parser/"

[features]
# Enables `derive(serde::{Serialize,Deserialize})` on the Test* structures.
serde = ["dep:serde"]
# Parse the `properties` element as an hashmap
properties_as_hashmap = []
default = ["properties_as_hashmap"]

[dependencies]
quick-xml = { version="0.30", features = ["escape-html"]}
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
